<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash_screen"
    tools:context=".HomeActivity">
    <ImageView
        android:id="@+id/menuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/oval_white"
        android:padding="5dp"
        android:src="@drawable/baseline_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/notificationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/oval_white"
        android:padding="5dp"
        android:src="@drawable/baseline_notifications_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/aclonica"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/background_half"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/manImg"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/oval_sky"
                        android:padding="25dp"
                        android:src="@drawable/bmi_man" />

                    <TextView
                        android:id="@id/man"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/square3"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/man"
                        android:textColor="@color/black" />


                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/womanImg"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/oval_pink"
                        android:padding="25dp"
                        android:src="@drawable/bmi_woman" />

                    <TextView
                        android:id="@+id/woman"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/square3"
                        android:fontFamily="@font/aclonica"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:text="@string/woman"
                        android:textColor="@color/black" />


                </LinearLayout>



            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Height Block_________________________________________________________________________-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/square3"
            android:backgroundTint="@color/light_blue"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/aclonica"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:fontFamily="@font/glory"
                    android:gravity="center_horizontal"
                    android:hint="170"
                    android:inputType="numberDecimal"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:textFontWeight="1"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/aclonica"
                    android:text="cm"
                    android:textSize="30sp" />


            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp"
                android:thumbTint="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <!--Height Block_________________________________________________________________________-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!--Weight Block_____________________________________________________________________-->

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="20sp"
                android:background="@drawable/square"
                android:backgroundTint="@color/light_blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/aclonica"
                    android:padding="5dp"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:fontFamily="@font/glory"
                        android:hint="55"
                        android:inputType="number"
                        android:padding="3dp"
                        android:textColor="@color/black"
                        android:textFontWeight="1"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/aclonica"
                        android:padding="2dp"
                        android:text="kg"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/weightMinus"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/oval_white"
                        android:padding="10dp"
                        android:src="@drawable/minus1" />


                    <ImageView
                        android:id="@+id/weigtPlus"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/oval_white"
                        android:padding="10dp"
                        android:src="@drawable/plus" />

                </LinearLayout>


            </LinearLayout>

            <!--Weight Block_____________________________________________________________________-->

            <!--Age Block________________________________________________________________________-->

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="20sp"
                android:background="@drawable/square"
                android:backgroundTint="@color/light_blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/aclonica"
                    android:padding="5dp"
                    android:text="@string/Age"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:fontFamily="@font/glory"
                        android:hint="18"
                        android:inputType="number"
                        android:padding="3dp"
                        android:textColor="@color/black"
                        android:textFontWeight="1"
                        android:textSize="20sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/aclonica"
                        android:padding="2dp"
                        android:text="year"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ageMinus"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/oval_white"
                        android:padding="10dp"
                        android:src="@drawable/minus1" />


                    <ImageView
                        android:id="@+id/agePlus"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/oval_white"
                        android:padding="10dp"
                        android:src="@drawable/plus" />

                </LinearLayout>


            </LinearLayout>

            <!--Age Block________________________________________________________________________-->

        </LinearLayout>

        <Button
            android:id="@+id/calculateBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/calculate_your_bmi"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>